# schedulo

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  unit_testing_strategy_report.md
server/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
server/api/: urls.py
server/api/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_permission_announcement_message_messagerecipient_and_more.py  0003_remove_rolepermissions_permission_id_and_more.py  0004_alter_memberpermissions_member_id.py  0005_remove_memberpermissions_workspace_role_id_and_more.py  0006_workspace_name.py  0007_rename_id_rows.py  0008_alter_workspacerole_name.py  0009_alter_shift_member.py  0010_rename_memberpermissions_fields.py  0011_alter_memberrole_member.py  0011_shiftrequest_workspace.py  0012_merge_20260331_1517.py  0013_alter_shiftrequest_accepted_and_more.py
server/api/models/: __init__.py  messages.py  roles.py  schedules.py  users.py
server/api/serializers/: __init__.py  base.py  member.py  permissions.py  role.py  shift.py  shiftRequest.py  token.py  users.py  workspace.py
server/api/tests/: __init__.py  auth.py  login.py  permissions.py  role.py  shift.py  user.py  workspace.py
server/api/views/: __init__.py  auth.py  login.py  member.py  permissions.py  register.py  role.py  shift.py  shiftRequest.py  token.py  user.py  (+1 more)
server/server/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
(+142 files in other folders)
